cmake_minimum_required(VERSION 3.21...3.27)

#-------------------------------------------------------------------------------
# Project Definition
#-------------------------------------------------------------------------------

project("View")

#-------------------------------------------------------------------------------
# Add subdirectories to the build
#-------------------------------------------------------------------------------

add_subdirectory("console")
