#-------------------------------------------------------------------------------
# Project definition
#-------------------------------------------------------------------------------

project("View")

#-------------------------------------------------------------------------------
# Add subdirectories to the build
#-------------------------------------------------------------------------------

add_subdirectory("console")
